# Claude-Code

./: .gitignore  README.md  README_PYTHON.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
src/: __init__.py  main.py
src/claude_code/: __init__.py  main.py
src/claude_code/bridge/: __init__.py  auth.py  core.py  session.py  types.py
src/claude_code/cli/: __init__.py  commands.py  repl.py  workflow.py
src/claude_code/commands/: __init__.py  base.py  registry.py
src/claude_code/commands/builtin/: __init__.py  auth.py  bridge.py  config.py  git.py  init.py
src/claude_code/config/: __init__.py  settings.py
src/claude_code/constants/: __init__.py  api_limits.py  betas.py  common.py  cyber_risk_instruction.py  error_ids.py  figures.py  files.py  github_app.py  keys.py  messages.py  oauth.py  output_styles.py  product.py  prompts.py  query_source.py  spinner_verbs.py  system.py  system_prompt_sections.py  tool_limits.py  turn_completion_verbs.py  xml.py
src/claude_code/mcp/: __init__.py  server.py  types.py
src/claude_code/mcp/handlers/: __init__.py  prompts.py  resources.py  tools.py
src/claude_code/services/: __init__.py
src/claude_code/services/api/: __init__.py  claude.py  errors.py  retry.py  usage.py
src/claude_code/state/: __init__.py  app_state.py
src/claude_code/tools/: __init__.py  agent.py  agent_tool.py  base.py  bash.py  config.py  constants.py  execution.py  file_operations.py  git_ops.py  lsp.py  mcp_tool.py  notebook.py  plan_worktree_tools.py  scheduling.py  search.py  skill_tool.py  tasks.py  web.py
src/claude_code/transports/: __init__.py  base.py  sse.py  websocket.py
src/claude_code/types/: __init__.py  message.py  permissions.py  tools.py
src/claude_code/utils/: __init__.py  env.py  filesystem.py  format.py  git.py  logging.py  time.py
tests/: README.md  __init__.py  conftest.py
tests/test_cli/: test_commands.py
tests/test_commands/: test_base.py  test_registry.py
tests/test_integration/: test_basic_workflow.py
tests/test_tools/: test_base.py
tests/unit/: test_config.py  test_types.py
